--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         <div class="add-btn-div">
             <img src="/assets/image/add-btn.png" alt="Add Button" class="add-btn">
         </div>
+        <div class="minus-btn-div">
+            <img src="/assets/image/minus-btn.png" alt="Minus Button" class="minus-btn">
+        </div>
         <div class="sideBar-cardClone i-dsp-none">
             <div class="select-item">
                 <a href="javascript:void(0)">1</a>
