--- a/signup.html
+++ b/signup.html
@@ -116,6 +116,9 @@
                                 aria-label="First Name First name is required." aria-required="true" value=""
                                 placeholder="" class="input-field">
                         </label>
+                        <div class="error-msg">
+                            <p></p>
+                        </div>
                     </div>
                     <div class="d-flex form-flex-wrapper btn-div">
                         <button type="button" class="btn btn-primary btn-lg btn-color signUp-btn" disabled>Sign Up</button>
