--- a/admin.html
+++ b/admin.html
@@ -84,6 +84,7 @@
 <script src="/assets/js/popper.min.js"></script>
 <script src="/assets/js/bootstrap.js"></script>
 <script src="/assets/js/air-datepicker.js"></script>
+<script src="/assets/js/header.js"></script>
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
 <script src="/assets/js/main.js"></script>
