--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
 <script src="/assets/js/bootstrap.js"></script>
 <script src="/assets/js/air-datepicker.js"></script>
 <script src="/assets/js/cropper.js"></script>
+<script src="/assets/js/header.js"></script>
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
 <script src="/assets/js/main.js"></script>
