--- a/login.html
+++ b/login.html
@@ -91,7 +91,11 @@
                         <label for="inputPassword" class="password-label">
                             <span class="input-field_label">Password<span class="input-field_required"
                                     aria-hidden="true"> *</span></span>
-                            <input id="inputPassword" type="text" name="password" class="input-field">
+                            <input id="inputPassword" type="password" name="password" class="input-field">
+                            <div class="password-icon-div">
+                                <img src="/assets/image/password-icon.png" alt="password-eye-icon"
+                                    class="password-icon-eye">
+                            </div>
                         </label>
                     </div>
                     <a href="/forget-password.html" class="forget-password">Forget Password?</a>
