--- a/signup.html
+++ b/signup.html
@@ -115,13 +115,18 @@
                             <input id="inputConfirmPassword" type="password" name="confirmPassword"
                                 aria-label="First Name First name is required." aria-required="true" value=""
                                 placeholder="" class="input-field">
+                            <div class="password-icon-div">
+                                <img src="/assets/image/password-icon.png" alt="password-eye-icon"
+                                    class="password-icon-eye">
+                            </div>
                         </label>
                         <div class="error-msg">
                             <p></p>
                         </div>
                     </div>
                     <div class="d-flex form-flex-wrapper btn-div">
-                        <button type="button" class="btn btn-primary btn-lg btn-color signUp-btn" disabled>Sign Up</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-color signUp-btn" disabled>Sign
+                            Up</button>
                         <button type="button" class="btn btn-secondary btn-lg btn-color cancel-btn">Cancel</button>
                     </div>
                 </form>
