--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="card-section login-box signup">
                 <h2 class="heading-title">Sign Up Form</h2>
-                <form>
+                <form method="post" action="/">
                     <div class="form-group login-form">
                         <label for="inputUserName">
                             <span class="input-field_label">Username<span class="input-field_required"
