--- a/login.html
+++ b/login.html
@@ -119,6 +119,7 @@
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
 <script src="/assets/js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.js"></script>
 <script src="/assets/js/login.js"></script>
 <script src="/assets/js/validation.js"></script>
 
