--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="card-section login-box signup">
                 <h2 class="heading-title">Sign Up Form</h2>
-                <form>
+                <form method="POST" action="/api/user/register">
                     <div class="form-group login-form">
                         <label for="inputUserName">
                             <span class="input-field_label">Username<span class="input-field_required"
@@ -179,6 +179,7 @@
 <script src="/assets/js/base64.js"></script>
 <script src="/assets/js/setImage.js"></script>
 <script src="/assets/js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.js"></script>
 <script src="/assets/js/login.js"></script>
 <script src="/assets/js/validation.js"></script>
 
