--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <a class="nav-link" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item dsp-none">
-                                <a class="nav-link" href="#">Admin</a>
+                                <a class="nav-link" href="/admin.html">Admin</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/login.html">Login</a>
