--- a/frontend/forget-password.html
+++ b/frontend/forget-password.html
@@ -43,13 +43,13 @@
                         </div>
                         <div class="d-flex mobile-d-flex">
                             <li class="nav-item">
-                                <a class="nav-link" href="/index.html">Home</a>
+                                <a class="nav-link" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item dsp-none">
-                                <a class="nav-link" href="/admin.html">Admin</a>
+                                <a class="nav-link" href="./admin.html">Admin</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/login.html">Login</a>
+                                <a class="nav-link" href="./login.html">Login</a>
                             </li>
                         </div>
                     </div>
