--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -43,13 +43,13 @@
                         </div>
                         <div class="d-flex mobile-d-flex">
                             <li class="nav-item">
-                                <a class="nav-link" href="/index.html">Home</a>
+                                <a class="nav-link" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item dsp-none">
                                 <a class="nav-link" href="#">Admin</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/login.html">Login</a>
+                                <a class="nav-link" href="./login.html">Login</a>
                             </li>
                         </div>
                     </div>
